<resources>
    <string name="app_name" translatable="false">Rocket Pro</string>
    <string name="edit_input_password" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ._/=+@%#?</string>
    <string name="edit_input_sfznum" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ._/=+@%#?()</string>
    <string name="edit_input_0zZ" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="input_phone_email" translatable="false">请输入手机号或邮箱地址</string>
    <string name="input_phone_hint" translatable="false">请输入手机号</string>
    <string name="first_get_phone_vertcode" translatable="false">请先获取验证码</string>
    <string name="error_code_phone" translatable="false">请输入获取验证码的手机号</string>
    <string name="error_code_email" translatable="false">请输入获取验证码的邮箱号</string>
    <string name="input_email_hint" translatable="false">请输入邮箱地址</string>
    <string name="phone_registration" translatable="false">手机号注册</string>
    <string name="email_registration" translatable="false">邮箱注册</string>
    <string name="do_you_have_an_account" translatable="false">已有账号？</string>
    <string name="email_login_hint" translatable="false">若使用手机号长时间收不到验证码，请尝试使用邮箱注册</string>
    <string name="next_step" translatable="false">下一步</string>
    <string name="send_code" translatable="false">发送验证码</string>
    <string name="phone_register_tips" translatable="false">使用常用手机号进行注册，更便捷</string>
    <string name="email_register_tips" translatable="false">使用常用邮箱进行注册</string>
    <string name="search_for_countries_or_regions" translatable="false">搜索国家或地区</string>
    <string name="country_or_region" translatable="false">国家或地区</string>
    <string name="sms_verification_code" translatable="false">注册验证码</string>
    <string name="has_send_sms_to_phone" translatable="false">验证码已发送到你的手机 </string>
    <string name="has_send_sms_to_email" translatable="false">验证码已发送到你的邮箱 </string>
    <string name="has_not_get_code" translatable="false">没收到验证码？</string>
    <string name="resend" translatable="false">重新发送</string>
    <string name="create_password" translatable="false">创建密码</string>
    <string name="create_password_tips">创建登录密码可增强资产安全性，用于登录账号</string>
    <string name="confirm_login_password" translatable="false">请确认登录密码</string>
    <string name="create_payment_password" translatable="false">设置支付密码</string>
    <string name="create_pay_password_tips" translatable="false">创建支付密码可加大资产安全性，用于资产的支出</string>
    <string name="invitation_code" translatable="false">邀请码</string>
    <string name="input_invite_code_tips" translatable="false">填写正确格式邀请码(非必填)</string>
    <string name="input_invite_code_hint" translatable="false">请输入邀请码</string>
    <string name="confirm_registration" translatable="false">完成注册</string>
    <string name="login" translatable="false">登录</string>
    <string name="not_have_account" translatable="false">还没有平台账号？</string>
    <string name="password" translatable="false">密码</string>
    <string name="forget_password" translatable="false">忘记密码</string>
    <string name="please_enter_the_correct_phone_number" translatable="false">请输入正确的电话号码</string>
    <string name="enter_ok_email_address" translatable="false">请输入正确的邮箱地址</string>
    <string name="please_select_country_region" translatable="false">请选择国家或地区</string>
    <string name="sms_code_error_hint" translatable="false">你输入的验证码错误，请重新输入</string>
    <string name="input_login_password_hint" translatable="false">请输入登录密码</string>
    <string name="login_password_format_error" translatable="false">登录密码格式不正确</string>
    <string name="inconsistent_password_entered_twice" translatable="false">两次输入的密码不一致</string>
    <string name="pay_password_format_error" translatable="false">支付密码格式不正确</string>
    <string name="register_success" translatable="false">注册成功</string>
    <string name="send_code_ok" translatable="false">验证码已发送</string>
    <string name="register" translatable="false">注册</string>
    <string name="input_correct_phone" translatable="false">请输入正确的电话号码或者邮箱</string>
    <string name="input_password_hint" translatable="false">请输入密码</string>
    <string name="input_pay_password_hint" translatable="false">请输入支付密码（字母开头，至少6位）</string>
    <string name="the_registrar_agrees_to_the" translatable="false">注册代表同意</string>
    <string name="platform_user_agreement" translatable="false">《用户协议》</string>
    <string name="currency_transaction">法币交易</string>
    <string name="easily_buy_digital_assets">轻松购买数字资产</string>
    <string name="c2c_">币币交易</string>
    <string name="easy_to_ask_for_orders_without_worry">轻松挂单无需烦恼</string>
    <string name="my_assets_">我的资产(¥)</string>
    <string name="bind_ok" translatable="false">绑定成功</string>
    <string name="qr">二维码</string>
    <string name="transfer">划转</string>
    <string name="c2c_wallet_">C2C钱包(¥)</string>
    <string name="exc_total_amount_of_issuance">发行总量</string>
    <string name="clear_cache" translatable="false">是否清空缓存</string>
    <string name="ver_code_error" translatable="false">手机验证码已失效，是否返回重新获取验证码！</string>
    <string name="quantity_24">24h量</string>
    <string name="forget_payment_password_">忘记支付密码？</string>
    <string name="ok">确定</string>
    <string name="save_screenshot" translatable="false">保存截图</string>
    <string name="hintCodeMess" translatable="false">请务必保存该密钥或者截图二维码</string>
    <string name="save_screenshot_successfully" translatable="false">保存截图成功</string>
    <string name="input_payment_password">输入支付密码</string>
    <string name="request_read_write_permissions">需要读写权限</string>
    <string name="save_success" translatable="false">保存成功</string>
    <string name="cancel">取消</string>
    <string name="send_sms">发送验证码</string>
    <string name="request_camera_read_write_permissions">需要相机和读写权限</string>
    <string name="exc_wal_submit_success">提交成功</string>
    <string name="home">首页</string>
    <string name="c2c">C2C</string>
    <string name="trade">交易</string>
    <string name="capital">资产</string>
    <string name="me">我的</string>
    <string name="account">账户</string>
    <string name="my_assets">我的资产</string>
    <string name="account_and_security">账户与安全</string>
    <string name="watting_for_" translatable="false">暂未开放</string>
    <string name="bind_phone_num" translatable="false">绑定手机号</string>
    <string name="bind_email_num" translatable="false">绑定邮箱</string>
    <string name="invitation_list">邀请榜</string>
    <string name="help_and_support">帮助与支持</string>
    <string name="about_us">关于我们</string>
    <string name="rocket_" translatable="false">Rocket简介</string>
    <string name="invite_friends">邀请好友</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="setting">设置</string>
    <string name="security_level">安全级别</string>
    <string name="mobile_phone">手机</string>
    <string name="email">邮箱</string>
    <string name="user_id">UID</string>
    <string name="email_service_one" translatable="false">1961373652@qq.com</string>
    <string name="email_service_two" translatable="false">3408503835@qq.com</string>
    <string name="opened">已绑定</string>
    <string name="unopened">未绑定</string>
    <string name="binded">已绑定</string>
    <string name="start_bind" translatable="false">绑 定</string>
    <string name="unbinded">未绑定</string>
    <string name="google_authenticator">谷歌身份验证器</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="uncertified">未认证</string>
    <string name="certified">已认证</string>
    <string name="currency_trading_setup">法币交易设置</string>
    <string name="other_settings">其他设置</string>
    <string name="login_password">登录密码</string>
    <string name="gesture_password">手势密码</string>
    <string name="fingerprint_password">指纹密码(尚未开放)</string>
    <string name="reset">重置</string>
    <string name="not_set">未设置</string>
    <string name="pending_review">待审核</string>
    <string name="rejected">已驳回</string>
    <string name="install_verifier">安装验证器</string>
    <string name="binding_verifier">绑定验证器</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="download_google_verifier_app">下载谷歌验证器APP</string>
    <string name="download_google_hint">安卓用户登录应用商店或使用手机浏览器搜索“谷歌验证器”下载。iOS用户登录App Store搜索“Authenticator”下载。</string>
    <string name="bind_google_hint">打开谷歌验证器，扫描下方二维码或手动输入下述密钥添加验证令牌。</string>
    <string name="key_">密钥:</string>
    <string name="copy">复制</string>
    <string name="bind_google_save_hint">密钥用于手机更换或遗失找回谷歌验证器，绑定前请务必将下述密钥备份保存。</string>
    <string name="complete">完成</string>
    <string name="bind_google_code_success">绑定谷歌验证码成功</string>
    <string name="identity_information">身份信息</string>
    <string name="name">姓名</string>
    <string name="input_real_name_hint">请输入真实姓名</string>
    <string name="id_number">身份证号</string>
    <string name="id_card" translatable="false">身份证</string>
    <string name="input_id_number_hint">请输入身份证号</string>
    <string name="input_card_number_hint" translatable="false">请输入证件号码</string>
    <string name="idcard_num" translatable="false">证件号码</string>
    <string name="submit">提交</string>
    <string name="under_review">审核中</string>
    <string name="audit_results">审核结果</string>
    <string name="recertification">重新认证</string>
    <string name="review">审核</string>
    <string name="real_name_status_submit_success_hint">实名认证资料已提交成功\n请等待平台认证</string>
    <string name="real_name_status_under_review">正在进行审核\n请耐心等待</string>
    <string name="successful_review">审核成功</string>
    <string name="real_name_status_success_hint">恭喜您，审核成功</string>
    <string name="audit_failure">审核失败</string>
    <string name="rel_name_status_fail_hint">很遗憾，审核失败 \n 请重新进行实名认证</string>
    <string name="input_old_password_hint">请输入原密码</string>
    <string name="create_a_payment_password">创建支付密码</string>
    <string name="reset_pay_password_title_hint">请重置至少6位数字和字母支付密码</string>
    <string name="input_6_12_pay_password_hint">请输入至少6位字母和数字</string>
    <string name="confirm_pay_password_hint">请确认支付密码</string>
    <string name="set_safe_password_google_code_title_hint">打开 身份验证器 获取 6 位谷歌验证码(如您未绑定可直接点击完成按钮)</string>
    <string name="later_" translatable="false">以后再说</string>
    <string name="to_realm" translatable="false">去认证</string>
    <string name="hint_to_realm" translatable="false">请完成实名认证</string>
    <string name="update_name" translatable="false">去修改</string>
    <string name="confirm_info" translatable="false">信息确认</string>
    <string name="name_h" translatable="false">姓名：</string>
    <string name="id_card_num" translatable="false">证件号码：</string>
    <string name="view_line" translatable="false">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </string>
    <string name="real_name_error_hint" translatable="false">\t\t\t 注： 在第一次进行实名认证的时候，点击拍照时，一定需要按照上面的操作进行，一定要点击允许，否则会出现照片无法上传错误。</string>
    <string name="error_real_hint" translatable="false">若由于操作失误，在点击拍照时权限点击失误，请参照下面的操作步骤进行尝试!</string>
    <string name="huawei_hint" translatable="false">1、华为手机处理办法：\n 打开手机  进入 “设置” --》  “应用” --》  “权限管理”  --》  “RocketPro”  打开之后，查看 “存储” 是否已经开打，若未打开，需要在这里点击打开    </string>
    <string name="xiaomi_hint" translatable="false">1、小米手机处理办法：\n 打开手机 进入 “设置” --》  “应用设置”  --》  “授权管理”  --》  “应用权限管理” --》 “RocketPro” --》 点击打开之后，查看 “读写手机存储” 是否已经打开，若未打开，需要在这里打开   </string>
    <string name="vivo_hint" translatable="false">1、vivo手机处理办法： \n 打开手机  “设置” --》  “更多设置”  --》  “权限管理”  --》  “RocketPro”  --》  点击打开之后，查看“使用摄像头”是否允许，若未允许，请打开   </string>
    <string name="last_hint" translatable="false">若使用上诉办法仍然无法解决您的问题，请先卸载应用，在重新安装，重复上诉正确的的操作步骤，若还是无法解决，请将手机品牌和型号上报至官方客服寻求解决办法。谢谢合作！</string>
    <string name="take_hint" translatable="false">1、点击拍照时，会出现如下提示，需要您按照下图红色的标注进行操作</string>
    <string name="ok_upload" translatable="false">正确上传照片信息方式：</string>
    <string name="regist">注册账户</string>
    <string name="sure">确认</string>
    <string name="welcome">欢迎使用</string>
    <string name="regist_success_tips">恭喜您注册成功</string>
</resources>