<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_payment_password"
        android:textColor="@color/color262626"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_pay_password_tips"
        android:textColor="@color/colorC3C3C3"
        android:textSize="14sp"/>

    <!--支付密码-->
    <com.ifenduo.lib_base.widget.CustomEditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:ce_bottom_line_error_color="@color/colorEF2357"
        app:ce_bottom_line_focus_color="@color/colorAccent"
        app:ce_bottom_line_unfocus_color="@color/colorF1F1F1"
        app:ce_clean_button_drawable="@drawable/ic_custom_edit_clean"
        app:ce_clean_button_enable="false"
        app:ce_edit_digits="@string/edit_input_password"
        app:ce_edit_height="44dp"
        app:ce_edit_hint="@string/input_pay_password_hint"
        app:ce_edit_hint_color="@color/colorB7B7C4"
        app:ce_edit_input_type="password"
        app:ce_edit_text_color="@color/black"
        app:ce_edit_text_size="14sp"
        app:ce_error_drawable_left="@drawable/ic_edit_error"
        app:ce_eye_button_drawable="@drawable/selector_custom_edit_eye"
        app:ce_eye_button_enable="false"
        app:ce_high_level_color="@color/color24D95F"
        app:ce_left_button_enable="false"
        app:ce_level_normal_color="@color/colorF1F1F1"
        app:ce_level_view_enable="true"
        app:ce_level_view_height="4dp"
        app:ce_low_level_color="@color/colorEF2357"
        app:ce_middle_level_color="@color/colorEF5923"/>

    <!--确认支付密码-->
    <com.ifenduo.lib_base.widget.CustomEditText
        android:id="@+id/password_edit_text_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:ce_bottom_line_error_color="@color/colorEF2357"
        app:ce_bottom_line_focus_color="@color/colorAccent"
        app:ce_bottom_line_unfocus_color="@color/colorF1F1F1"
        app:ce_clean_button_drawable="@drawable/ic_custom_edit_clean"
        app:ce_clean_button_enable="false"
        app:ce_edit_digits="@string/edit_input_password"
        app:ce_edit_height="44dp"
        app:ce_edit_hint="@string/confirm_pay_password_hint"
        app:ce_edit_hint_color="@color/colorB7B7C4"
        app:ce_edit_input_type="password"
        app:ce_edit_text_color="@color/black"
        app:ce_edit_text_size="14sp"
        app:ce_error_drawable_left="@drawable/ic_edit_error"
        app:ce_eye_button_drawable="@drawable/selector_custom_edit_eye"
        app:ce_eye_button_enable="false"
        app:ce_high_level_color="@color/color24D95F"
        app:ce_left_button_enable="false"
        app:ce_level_normal_color="@color/colorF1F1F1"
        app:ce_level_view_enable="true"
        app:ce_level_view_height="4dp"
        app:ce_low_level_color="@color/colorEF2357"
        app:ce_middle_level_color="@color/colorEF5923"/>

    <!--下一步-->
    <TextView
        android:id="@+id/tv_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/next_step"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape_01aa78_radius_2"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>